--- a/Terminal Mystery/style.css
+++ b/Terminal Mystery/style.css
@@ -1,6 +1,6 @@
 html, body{
 width:100%;
-font-size:20px;
+font-size:100%1.25;
 }
 #computer{
 /*border-radius*/
@@ -26,7 +26,7 @@ background:#222;
     padding:5%;
     font-family: "Courier new", "american typewriter";
     font-weight: 400;
-    font-size: .8em;
+    font-size: 20px;
     line-height: 2;
     letter-spacing: 1.2px;
     color: #58bf1d;
