--- a/Terminal Mystery/style.css
+++ b/Terminal Mystery/style.css
@@ -26,7 +26,7 @@ background:#222;
     padding:5%;
     font-family: "Courier new", "american typewriter";
     font-weight: 400;
-    font-size: 200px;
+    font-size: .8em;
     line-height: 2;
     letter-spacing: 1.2px;
     color: #58bf1d;
