--- a/discord-bot-website-template/main.css
+++ b/discord-bot-website-template/main.css
@@ -9,15 +9,13 @@ text-decoration: none;
 color: #87A5FF;
 }
 
-footer {
-  position: relative;
-}
-
-.bottom {
-  position: fixed;
+.footer {
+  position: absolute;
+  right: 0;
   bottom: 0;
-  width:100%;
-  text-align: center 
+  left: 0;
+  padding: 1rem;
+  text-align: center;
 }
 
 .botTag {
