--- a/discord-bot-website-template/main.css
+++ b/discord-bot-website-template/main.css
@@ -28,3 +28,8 @@ color: #87A5FF;
   height: 20px;
   border-radius: 50%;
 }
+
+#container{width:100%;}
+#left{float:left;width:100px;}
+#right{float:right;width:100px;}
+#center{margin:0 auto;width:100px;}
