--- a/toasty-website/style.css
+++ b/toasty-website/style.css
@@ -34,3 +34,8 @@ background-size: 1800% 1800%;
     50%{background-position:100% 19%}
     100%{background-position:0% 82%}
 }
+.circular {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
