--- a/toasty-website/style.css
+++ b/toasty-website/style.css
@@ -1,3 +1,9 @@
+.footer {
+    height:200px;
+    display: table-cell;
+    vertical-align: bottom;
+}
+
 .typed-cursor{
     opacity: 1;
     -webkit-animation: blink 0.7s infinite;
