--- a/toasty-website/style.css
+++ b/toasty-website/style.css
@@ -1,10 +1,12 @@
+html {
+  font-family: 'Lobster', Sans-Serif; 
+}
+
 .footer {
   position: absolute;
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 1rem;
-  background-color: #efefef;
   text-align: center;
 }
 
