--- a/Terminal Mystery/style.css
+++ b/Terminal Mystery/style.css
@@ -48,8 +48,8 @@ background:#222;
 /*-webkit-border-radius:0.5em;
    -moz-border-radius:0.5em;
         border-radius:0.5em;*/
-    height:80%;
-    width:85%;
+    height:24px;
+    width:10px;
     padding:5%;
     font-family: "Courier new", "american typewriter";
     font-weight: 400;
